# vecm

./: Cargo.toml  README.md  gen_swizzle.rs  regen_swizzle.sh
src/: bin.rs  lib.rs  mat.rs  quaternion.rs  swizzle.rs  vec.rs
src/vec/: mod.rs  ops.rs  packed.rs
