[package]
name = "vecm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
binverse_impls = ["binverse"]

[dependencies]
num-traits = "0.2"
binverse = { version = "0", optional = true }

[dev-dependencies]
rand = "0.8.4"